--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "themod-sda",
-  "version": "1.0.1",
-  "private": true,
+  "version": "1.0.2",
+  "private": false,
   "main": "index.js",
   "homepage": "./",
   "dependencies": {
@@ -12,7 +12,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
-    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "react-tooltip": "^5.18.0",
     "react-transition-group": "^4.4.5",
@@ -30,6 +29,7 @@
     "eject": "react-scripts eject",
     "electron": "electron --trace-deprecation .",
     "dev": "nodemon --watch . --exec electron .",
+    "dist": "electron-builder",
     "package-win": "electron-packager . themod-sda --platform=win32 --arch=x64 --out=dist --icon=logo.ico --asar --overwrite --prune"
   },
   "eslintConfig": {
@@ -55,10 +55,34 @@
     "icon": "logo.ico",
     "appId": "com.themod.themod-sda"
   },
+  "build": {
+    "appId": "com.themod.themod-sda",
+    "productName": "themod-sda",
+    "asar": true,
+    "directories": {
+      "output": "dist"
+    },
+    "extends": null,
+    "publish": {
+      "provider": "github",
+      "owner": "themod161",
+      "repo": "themod-sda"
+    },
+    "nsis": {
+      "oneClick": false,
+      "perMachine": true,
+      "allowToChangeInstallationDirectory": true
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "logo.ico"
+    }
+  },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.0-placeholder-for-preset-env.2",
     "asar": "^3.2.0",
     "electron": "^25.2.0",
+    "react-scripts": "^5.0.1",
     "electron-packager": "^17.1.1"
   }
 }
