--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "themod-sda",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "private": false,
   "main": "index.js",
   "homepage": "./",
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
+    "node-telegram-bot-api": "^0.61.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
@@ -82,7 +83,7 @@
     "@babel/plugin-proposal-private-property-in-object": "7.21.0-placeholder-for-preset-env.2",
     "asar": "^3.2.0",
     "electron": "^25.2.0",
-    "react-scripts": "^5.0.1",
-    "electron-packager": "^17.1.1"
+    "electron-packager": "^17.1.1",
+    "react-scripts": "^5.0.1"
   }
 }
