--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "themod-sda",
-  "version": "1.0.5",
+  "version": "1.1.0",
   "private": false,
   "main": "index.js",
   "homepage": "./",
@@ -9,6 +9,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
+    "axios": "^1.4.0",
+    "https-proxy-agent": "^7.0.1",
     "node-telegram-bot-api": "^0.61.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
